# src/controllers/user.js
@@ -5,7 +5,7 @@ import jwt from 'jsonwebtoken'
 const SECRET = 'e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855'
 
 export async function createTableUser() {
-    openDb().then(db => {
+    await openDb().then(db => {
         db.exec('CREATE TABLE IF NOT EXISTS user(email TEXT NOT NULL PRIMARY KEY, password TEXT NOT NULL)')
     })
 }
@@ -34,11 +34,19 @@ export async function selectUsers(req, res) { //documentado.
 }
 
 export async function selectUser(req, res) {
-    let email = req.body.email
-    await openDb().then(db => {
-        db.get('SELECT * FROM user WHERE email=?', [email])
-            .then(user => res.json(user))
-    })
+    let user = req.body
+    try {
+        await openDb().then(db => {
+            db.get('SELECT * FROM user WHERE email=?', [user.email])
+                .then(user => res.json(user))
+        })
+    } catch (error) {
+        console.error(error);
+        res.status(500).json({
+            msg: "Erro: Não foi possível realizar esta ação, tente novamente mais tarde.",
+            error: error.message
+        })
+    }
 }
 
 export async function insertUser(req, res) { //documentado.
@@ -72,7 +80,7 @@ export async function insertUser(req, res) { //documentado.
             res.status(500).json({
                 msg: "Erro: Não foi possível realizar esta ação, tente novamente mais tarde.",
                 error: error.message
-            });
+            })
         }
     }
 }
@@ -107,9 +115,9 @@ export async function updateUser(req, res) { //documentado.
     }
 }
 
-export async function deleteUser(req, res) { //
-    let email = req.body.email
-    let db = openDb()
+export async function deleteUser(req, res) { //documentado
+    let user = req.body
+    let db = await openDb()
 
     try {
         if (!user.email) {
@@ -117,13 +125,12 @@ export async function deleteUser(req, res) { //
                 message: "Erro: Necessário informar um email."
             });
         } else {
-            await db.get('DELETE FROM user WHERE email=?', [email])
+            await db.get('DELETE FROM user WHERE email=?', [user.email])
             res.status(200).json({
                 "msg": "Usuário deletado com sucesso!"
             })
         }
     } catch (error) {
-        console.error("Erro: Não foi possível realizar esta ação, tente novamente mais tarde.", error.message);
         res.status(500).json({
             msg: "Erro: Não foi possível realizar esta ação, tente novamente mais tarde.",
             error: error.message
@@ -131,22 +138,27 @@ export async function deleteUser(req, res) { //
     }
 }
 
-export async function authUser(req, res) {
-    let email = req.body.email
-    await openDb().then(db => {
-        db.get('SELECT * FROM user WHERE email=?', [email])
-            .then(user => {
-                if (req.body.email === user.email && req.body.password === user.password) {
-                    const token = jwt.sign({ userId: req.body.email }, SECRET, { expiresIn: 300 })
-                    return res.status(200).json({
-                        auth: true, token
-                    })
-                } else {
-                    res.status(401).json({
-                        message: "Não autorizado!"
-                    }).end()
-                }
-            })
-    })
-}
+export async function authUser(req, res) { //documentado
+    let user = req.body;
 
+    try {
+        const db = await openDb();
+        const userResponse = await db.get('SELECT * FROM user WHERE email=?', [user.email]);
+
+        if (userResponse && user.email === userResponse.email && user.password === userResponse.password) {
+            const token = jwt.sign({ userId: user.email }, SECRET, { expiresIn: 300 });
+            return res.status(200).json({
+                auth: true, token
+            });
+        } else {
+            return res.status(401).json({
+                message: "Não autorizado."
+            }).end();
+        }
+    } catch (error) {
+        console.error(error);
+        return res.status(500).json({
+            message: "Erro interno do servidor."
+        }).end();
+    }
+}
